--- a/BallScrew.ui
+++ b/BallScrew.ui
@@ -42,6 +42,31 @@ qproperty-diameter: 20;
      <widget class="QWidget" name="wgtNext2" native="true">
       <layout class="QVBoxLayout" name="verticalLayout">
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <spacer name="horizontalSpacer_14">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>40</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="QPushButton" name="btnDefaultAll">
+           <property name="text">
+            <string>Сброс значений
+по умолчанию</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QLabel" name="label_16">
          <property name="text">
           <string>Параметры записи</string>
@@ -274,7 +299,7 @@ qproperty-diameter: 20;
        <enum>QFrame::NoFrame</enum>
       </property>
       <property name="currentIndex">
-       <number>1</number>
+       <number>4</number>
       </property>
       <widget class="QWidget" name="page1">
        <layout class="QGridLayout" name="gridLayout_2">
@@ -541,7 +566,7 @@ font: 15pt bold;</string>
           </property>
          </widget>
         </item>
-        <item row="8" column="0">
+        <item row="10" column="0">
          <spacer name="verticalSpacer_4">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -554,7 +579,7 @@ font: 15pt bold;</string>
           </property>
          </spacer>
         </item>
-        <item row="1" column="0" colspan="3">
+        <item row="3" column="0" colspan="3">
          <widget class="QGroupBox" name="gbKin21">
           <property name="title">
            <string>Кинематические параметры</string>
@@ -610,23 +635,10 @@ font: 15pt bold;</string>
            <item row="4" column="1">
             <widget class="QDoubleSpinBox" name="spnNom_Accel21"/>
            </item>
-           <item row="4" column="2">
-            <spacer name="verticalSpacer_9">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
           </layout>
          </widget>
         </item>
-        <item row="1" column="3">
+        <item row="3" column="3">
          <spacer name="horizontalSpacer_3">
           <property name="orientation">
            <enum>Qt::Horizontal</enum>
@@ -988,19 +1000,6 @@ font: 15pt bold;</string>
            <item row="1" column="1">
             <widget class="QSpinBox" name="spnPitch24"/>
            </item>
-           <item row="5" column="2">
-            <spacer name="horizontalSpacer_12">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
-           </item>
           </layout>
          </widget>
         </item>
@@ -1079,19 +1078,6 @@ font: 15pt bold;</string>
            </item>
            <item row="4" column="1">
             <widget class="QSpinBox" name="spnN24"/>
-           </item>
-           <item row="5" column="2">
-            <spacer name="horizontalSpacer_13">
-             <property name="orientation">
-              <enum>Qt::Horizontal</enum>
-             </property>
-             <property name="sizeHint" stdset="0">
-              <size>
-               <width>40</width>
-               <height>20</height>
-              </size>
-             </property>
-            </spacer>
            </item>
           </layout>
          </widget>
@@ -1268,8 +1254,8 @@ font: 15pt bold;</string>
    <slot>onBtnNext2()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>695</x>
-     <y>567</y>
+     <x>729</x>
+     <y>658</y>
     </hint>
     <hint type="destinationlabel">
      <x>644</x>
@@ -1284,8 +1270,8 @@ font: 15pt bold;</string>
    <slot>onBtnFileSelect()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>782</x>
-     <y>495</y>
+     <x>854</x>
+     <y>602</y>
     </hint>
     <hint type="destinationlabel">
      <x>801</x>
@@ -1300,8 +1286,8 @@ font: 15pt bold;</string>
    <slot>onBtnNext1()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>224</x>
-     <y>77</y>
+     <x>650</x>
+     <y>504</y>
     </hint>
     <hint type="destinationlabel">
      <x>491</x>
@@ -1316,8 +1302,8 @@ font: 15pt bold;</string>
    <slot>onForm1DataChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>155</x>
-     <y>23</y>
+     <x>295</x>
+     <y>153</y>
     </hint>
     <hint type="destinationlabel">
      <x>129</x>
@@ -1332,8 +1318,8 @@ font: 15pt bold;</string>
    <slot>onForm1DataChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>172</x>
-     <y>23</y>
+     <x>444</x>
+     <y>153</y>
     </hint>
     <hint type="destinationlabel">
      <x>371</x>
@@ -1348,8 +1334,8 @@ font: 15pt bold;</string>
    <slot>onForm1DataChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>190</x>
-     <y>23</y>
+     <x>597</x>
+     <y>153</y>
     </hint>
     <hint type="destinationlabel">
      <x>579</x>
@@ -1364,8 +1350,8 @@ font: 15pt bold;</string>
    <slot>onForm1DataChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>225</x>
-     <y>23</y>
+     <x>1038</x>
+     <y>153</y>
     </hint>
     <hint type="destinationlabel">
      <x>937</x>
@@ -1380,8 +1366,8 @@ font: 15pt bold;</string>
    <slot>onForm1DataChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>224</x>
-     <y>33</y>
+     <x>543</x>
+     <y>432</y>
     </hint>
     <hint type="destinationlabel">
      <x>1097</x>
@@ -1412,8 +1398,8 @@ font: 15pt bold;</string>
    <slot>onEdtFileChanged()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>725</x>
-     <y>500</y>
+     <x>768</x>
+     <y>591</y>
     </hint>
     <hint type="destinationlabel">
      <x>333</x>
@@ -1428,12 +1414,28 @@ font: 15pt bold;</string>
    <slot>onBtnBack()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>179</x>
-     <y>539</y>
+     <x>229</x>
+     <y>658</y>
     </hint>
     <hint type="destinationlabel">
      <x>152</x>
      <y>583</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>btnDefaultAll</sender>
+   <signal>clicked()</signal>
+   <receiver>BallScrewControlMainWindow</receiver>
+   <slot>onBtnDefaultAll()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>1038</x>
+     <y>506</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>1156</x>
+     <y>513</y>
     </hint>
    </hints>
   </connection>
@@ -1450,5 +1452,6 @@ font: 15pt bold;</string>
   <slot>onForm1DataChanged()</slot>
   <slot>onEdtFileChanged()</slot>
   <slot>onBtnBack()</slot>
+  <slot>onBtnDefaultAll()</slot>
  </slots>
 </ui>
