--- a/BallScrewVCP3.ui
+++ b/BallScrewVCP3.ui
@@ -958,7 +958,44 @@ qproperty-diameter: 100;</string>
        <layout class="QGridLayout" name="gridLayout_20">
         <item row="1" column="1">
          <layout class="QGridLayout" name="gridLayout_19">
-          <item row="2" column="3" colspan="2">
+          <item row="1" column="5">
+           <spacer name="horizontalSpacer_17">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="1" column="4">
+           <widget class="LED" name="ledPos_Is_On33">
+            <property name="color">
+             <color>
+              <red>252</red>
+              <green>233</green>
+              <blue>79</blue>
+             </color>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <spacer name="horizontalSpacer_16">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="2" column="2" colspan="3">
            <widget class="ActionButton" name="btnDevice_Off33">
             <property name="styleSheet">
              <string notr="true">background-color: rgb(239, 41, 41);</string>
@@ -978,20 +1015,7 @@ qproperty-diameter: 100;</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="5">
-           <spacer name="horizontalSpacer_17">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-          <item row="1" column="3">
+          <item row="1" column="2" colspan="2">
            <widget class="LED" name="ledLoad_Is_On33">
             <property name="color">
              <color>
@@ -1002,7 +1026,7 @@ qproperty-diameter: 100;</string>
             </property>
            </widget>
           </item>
-          <item row="0" column="3" colspan="2">
+          <item row="0" column="2" colspan="3">
            <widget class="ActionButton" name="btnDevice_On33">
             <property name="styleSheet">
              <string notr="true">background-color: rgb(138, 226, 52);</string>
@@ -1030,30 +1054,6 @@ qproperty-diameter: 100;</string>
              <bool>true</bool>
             </property>
            </widget>
-          </item>
-          <item row="1" column="4">
-           <widget class="LED" name="ledPos_Is_On33">
-            <property name="color">
-             <color>
-              <red>252</red>
-              <green>233</green>
-              <blue>79</blue>
-             </color>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <spacer name="horizontalSpacer_16">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
           </item>
          </layout>
         </item>
@@ -1226,7 +1226,7 @@ font: 15pt bold;</string>
              </widget>
             </item>
             <item row="0" column="0">
-             <widget class="QCheckBox" name="chkDsp_Mode34">
+             <widget class="QCheckBox" name="chkDsp_Mode33">
               <property name="text">
                <string>Нагружение</string>
               </property>
@@ -1884,7 +1884,7 @@ font: 15pt bold;</string>
            <widget class="LED" name="ledPos_Overload34"/>
           </item>
           <item row="6" column="2">
-           <widget class="QLabel" name="label_5">
+           <widget class="QLabel" name="lblLoad_Error_Value34">
             <property name="text">
              <string>---</string>
             </property>
@@ -1901,7 +1901,7 @@ font: 15pt bold;</string>
            <widget class="LED" name="ledLoad_Overheat34"/>
           </item>
           <item row="8" column="3">
-           <widget class="QLabel" name="label_15">
+           <widget class="QLabel" name="lblLoad_Temperature_Max34">
             <property name="text">
              <string>---</string>
             </property>
@@ -1932,9 +1932,9 @@ font: 15pt bold;</string>
            </widget>
           </item>
           <item row="2" column="3">
-           <widget class="QLabel" name="label_3">
+           <widget class="QLabel" name="lblTorque1_Error_Value_Max34">
             <property name="text">
-             <string>TextLabel</string>
+             <string>---</string>
             </property>
            </widget>
           </item>
@@ -1942,9 +1942,9 @@ font: 15pt bold;</string>
            <widget class="LED" name="ledLoad_Alarm34"/>
           </item>
           <item row="1" column="3">
-           <widget class="QLabel" name="label_2">
+           <widget class="QLabel" name="lblTorque_Error_Value_Max34">
             <property name="text">
-             <string>TextLabel</string>
+             <string>---</string>
             </property>
            </widget>
           </item>
@@ -1972,7 +1972,7 @@ font: 15pt bold;</string>
            </widget>
           </item>
           <item row="8" column="2">
-           <widget class="QLabel" name="label_13">
+           <widget class="QLabel" name="lblLoad_Temperature34">
             <property name="text">
              <string>---</string>
             </property>
@@ -1993,14 +1993,14 @@ font: 15pt bold;</string>
            </widget>
           </item>
           <item row="6" column="3">
-           <widget class="QLabel" name="label_11">
+           <widget class="QLabel" name="lblLoad_Error_Value_Max34">
             <property name="text">
              <string>---</string>
             </property>
            </widget>
           </item>
           <item row="11" column="2">
-           <widget class="QLabel" name="label_16">
+           <widget class="QLabel" name="lblPos_Error_Value34">
             <property name="text">
              <string>---</string>
             </property>
@@ -2053,7 +2053,7 @@ qproperty-flashRate: 200;</string>
            <widget class="LED" name="ledSlip34"/>
           </item>
           <item row="12" column="3">
-           <widget class="QLabel" name="label_18">
+           <widget class="QLabel" name="lblPos_Overload_Value_Max34">
             <property name="text">
              <string>---</string>
             </property>
@@ -2063,7 +2063,7 @@ qproperty-flashRate: 200;</string>
            <widget class="LED" name="ledLoad_Overload34"/>
           </item>
           <item row="11" column="3">
-           <widget class="QLabel" name="label_17">
+           <widget class="QLabel" name="lblPos_Error_Value_Max34">
             <property name="text">
              <string>---</string>
             </property>
@@ -2079,9 +2079,9 @@ qproperty-flashRate: 200;</string>
            <widget class="LED" name="ledPos_Error34"/>
           </item>
           <item row="2" column="2">
-           <widget class="QLabel" name="label_4">
+           <widget class="QLabel" name="lblTorque1_Error_Value34">
             <property name="text">
-             <string>TextLabel</string>
+             <string>---</string>
             </property>
            </widget>
           </item>
@@ -2107,7 +2107,7 @@ qproperty-flashRate: 200;</string>
            </widget>
           </item>
           <item row="7" column="3">
-           <widget class="QLabel" name="label_14">
+           <widget class="QLabel" name="lblLoad_Overload_Value_Max34">
             <property name="text">
              <string>---</string>
             </property>
@@ -2121,16 +2121,16 @@ qproperty-flashRate: 200;</string>
            </widget>
           </item>
           <item row="7" column="2">
-           <widget class="QLabel" name="label_12">
+           <widget class="QLabel" name="lblLoad_Overload_Value34">
             <property name="text">
              <string>---</string>
             </property>
            </widget>
           </item>
           <item row="1" column="2">
-           <widget class="QLabel" name="label">
+           <widget class="QLabel" name="lblTorque_Error_Value34">
             <property name="text">
-             <string>TextLabel</string>
+             <string>---</string>
             </property>
            </widget>
           </item>
@@ -2155,21 +2155,21 @@ qproperty-flashRate: 200;</string>
            </widget>
           </item>
           <item row="12" column="2">
-           <widget class="QLabel" name="label_19">
+           <widget class="QLabel" name="lblPos_Overload_Value34">
             <property name="text">
              <string>---</string>
             </property>
            </widget>
           </item>
           <item row="13" column="2">
-           <widget class="QLabel" name="label_20">
+           <widget class="QLabel" name="lblPos_Temperature34">
             <property name="text">
              <string>---</string>
             </property>
            </widget>
           </item>
           <item row="13" column="3">
-           <widget class="QLabel" name="label_21">
+           <widget class="QLabel" name="lblPos_Temperature_Max34">
             <property name="text">
              <string>---</string>
             </property>
@@ -2201,7 +2201,7 @@ qproperty-flashRate: 200;</string>
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLabel" name="label_40">
+           <widget class="QLabel" name="lblTorque_Max34">
             <property name="text">
              <string>---</string>
             </property>
@@ -2234,7 +2234,7 @@ qproperty-flashRate: 200;</string>
              </widget>
             </item>
             <item row="2" column="1">
-             <widget class="Slider" name="aldAccel_Coeff34">
+             <widget class="Slider" name="sldAccel_Coeff34">
               <property name="maximum">
                <number>100</number>
               </property>
@@ -2465,20 +2465,6 @@ qproperty-flashRate: 200;</string>
               </property>
              </widget>
             </item>
-            <item row="2" column="4">
-             <widget class="StateLabel" name="statelabel_4">
-              <property name="text">
-               <string>---</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="4">
-             <widget class="StateLabel" name="statelabel_3">
-              <property name="text">
-               <string>---</string>
-              </property>
-             </widget>
-            </item>
             <item row="0" column="0" colspan="3">
              <widget class="QLabel" name="label_55">
               <property name="text">
@@ -2487,7 +2473,7 @@ qproperty-flashRate: 200;</string>
              </widget>
             </item>
             <item row="1" column="0" rowspan="2">
-             <widget class="ActionButton" name="btnLeft34">
+             <widget class="ActionButton" name="btnJog_Minus34">
               <property name="icon">
                <iconset resource="BallScrewVCP.qrc">
                 <normaloff>:/resources/caret_left.png</normaloff>:/resources/caret_left.png</iconset>
@@ -2504,7 +2490,7 @@ qproperty-flashRate: 200;</string>
              </widget>
             </item>
             <item row="1" column="2" rowspan="2">
-             <widget class="ActionButton" name="btnRight34">
+             <widget class="ActionButton" name="btnJog_Plus34">
               <property name="icon">
                <iconset resource="BallScrewVCP.qrc">
                 <normaloff>:/resources/caret_right.png</normaloff>:/resources/caret_right.png</iconset>
@@ -2517,6 +2503,20 @@ qproperty-flashRate: 200;</string>
               </property>
               <property name="jog_joint_pos_action" stdset="0">
                <bool>true</bool>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="4">
+             <widget class="QLabel" name="lblPosition34">
+              <property name="text">
+               <string>---</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="4">
+             <widget class="QLabel" name="lblPosition_Actual34">
+              <property name="text">
+               <string>---</string>
               </property>
              </widget>
             </item>
@@ -2538,22 +2538,8 @@ qproperty-flashRate: 200;</string>
               </property>
              </widget>
             </item>
-            <item row="1" column="2">
-             <widget class="StateLabel" name="statelabel_8">
-              <property name="text">
-               <string>---</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="2">
-             <widget class="StateLabel" name="statelabel_7">
-              <property name="text">
-               <string>---</string>
-              </property>
-             </widget>
-            </item>
             <item row="0" column="0">
-             <widget class="QCheckBox" name="checkBox_2">
+             <widget class="QCheckBox" name="chkDsp_Mode34">
               <property name="text">
                <string>Нагружение</string>
               </property>
@@ -2561,6 +2547,20 @@ qproperty-flashRate: 200;</string>
             </item>
             <item row="1" column="0">
              <widget class="LED" name="ledAt_Load34"/>
+            </item>
+            <item row="0" column="2">
+             <widget class="QLabel" name="lblLoad34">
+              <property name="text">
+               <string>---</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2">
+             <widget class="QLabel" name="lblLoad_Actual34">
+              <property name="text">
+               <string>---</string>
+              </property>
+             </widget>
             </item>
            </layout>
           </item>
