--- a/BallScrewVCP1.ui
+++ b/BallScrewVCP1.ui
@@ -45,6 +45,109 @@ qproperty-diameter: 20;
       </property>
       <widget class="QWidget" name="page31">
        <layout class="QGridLayout" name="gridLayout_8">
+        <item row="0" column="0" colspan="3">
+         <widget class="QLabel" name="label_134">
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="maximumSize">
+           <size>
+            <width>16777215</width>
+            <height>50</height>
+           </size>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">background-color: rgb(114, 159, 207);
+font: 15pt bold;</string>
+          </property>
+          <property name="text">
+           <string>3.1 Измерение хода</string>
+          </property>
+         </widget>
+        </item>
+        <item row="3" column="0">
+         <layout class="QGridLayout" name="gridLayout_10">
+          <item row="1" column="1">
+           <widget class="Slider" name="sldAcceleration31">
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="tickPosition">
+             <enum>QSlider::TicksBelow</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="Slider" name="sldVelocity31">
+            <property name="maximum">
+             <number>100</number>
+            </property>
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="tickPosition">
+             <enum>QSlider::TicksBelow</enum>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_53">
+            <property name="text">
+             <string>Скорость, мм/мин</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_54">
+            <property name="text">
+             <string>Ускорение, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QDoubleSpinBox" name="spnVelocity31"/>
+          </item>
+          <item row="1" column="2">
+           <widget class="QDoubleSpinBox" name="spnAcceleration31"/>
+          </item>
+         </layout>
+        </item>
+        <item row="2" column="2" rowspan="2">
+         <layout class="QGridLayout" name="gridLayout_11">
+          <item row="0" column="1">
+           <widget class="LED" name="ledPos_Alarm31"/>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_52">
+            <property name="text">
+             <string>Статус привода</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0" colspan="2" alignment="Qt::AlignHCenter">
+           <widget class="PushButton" name="btnLog_Trigger31">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Сохранить показание</string>
+            </property>
+            <property name="indicator_HAL_pin_option" stdset="0">
+             <bool>false</bool>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </item>
         <item row="1" column="0">
          <layout class="QHBoxLayout" name="horizontalLayout_12">
           <item>
@@ -233,72 +336,18 @@ qproperty-diameter: 20;
           </item>
          </layout>
         </item>
-        <item row="3" column="0">
-         <layout class="QGridLayout" name="gridLayout_10">
-          <item row="1" column="1">
-           <widget class="Slider" name="sldAcceleration31">
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="tickPosition">
-             <enum>QSlider::TicksBelow</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="Slider" name="sldVelocity31">
-            <property name="maximum">
-             <number>100</number>
-            </property>
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="tickPosition">
-             <enum>QSlider::TicksBelow</enum>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_53">
-            <property name="text">
-             <string>Скорость, мм/мин</string>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="0">
-           <widget class="QLabel" name="label_54">
-            <property name="text">
-             <string>Ускорение, мм/с&lt;sup&gt;2&lt;/sup&gt;</string>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </item>
-        <item row="0" column="0" colspan="3">
-         <widget class="QLabel" name="label_134">
-          <property name="minimumSize">
+        <item row="5" column="0">
+         <spacer name="verticalSpacer_8">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
            <size>
-            <width>0</width>
-            <height>50</height>
+            <width>20</width>
+            <height>40</height>
            </size>
           </property>
-          <property name="maximumSize">
-           <size>
-            <width>16777215</width>
-            <height>50</height>
-           </size>
-          </property>
-          <property name="styleSheet">
-           <string notr="true">background-color: rgb(114, 159, 207);
-font: 15pt bold;</string>
-          </property>
-          <property name="text">
-           <string>3.1 Измерение хода</string>
-          </property>
-         </widget>
+         </spacer>
         </item>
         <item row="2" column="0">
          <layout class="QGridLayout" name="gridLayout_9" columnstretch="0,0">
@@ -331,40 +380,6 @@ font: 15pt bold;</string>
            </widget>
           </item>
          </layout>
-        </item>
-        <item row="2" column="2" rowspan="2">
-         <layout class="QGridLayout" name="gridLayout_11">
-          <item row="1" column="0" colspan="2" alignment="Qt::AlignHCenter">
-           <widget class="QPushButton" name="btnSaveState31">
-            <property name="text">
-             <string>Сохранить показание</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_52">
-            <property name="text">
-             <string>Статус привода</string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="LED" name="ledPos_Alarm31"/>
-          </item>
-         </layout>
-        </item>
-        <item row="4" column="0">
-         <spacer name="verticalSpacer_8">
-          <property name="orientation">
-           <enum>Qt::Vertical</enum>
-          </property>
-          <property name="sizeHint" stdset="0">
-           <size>
-            <width>20</width>
-            <height>40</height>
-           </size>
-          </property>
-         </spacer>
         </item>
        </layout>
       </widget>
@@ -412,7 +427,8 @@ Machine on</string>
          <string notr="true">background-color: rgb(252, 233, 79);</string>
         </property>
         <property name="text">
-         <string>active_0</string>
+         <string>test
+active_0</string>
         </property>
         <property name="checkable">
          <bool>true</bool>
@@ -423,67 +439,30 @@ Machine on</string>
        </widget>
       </item>
       <item>
-       <widget class="PushButton" name="btnTestActive1">
+       <widget class="PushButton" name="btnTestAppend_Buffer31">
         <property name="styleSheet">
          <string notr="true">background-color: rgb(252, 233, 79);</string>
         </property>
         <property name="text">
-         <string>active_1</string>
+         <string>test
+append_buffer</string>
         </property>
         <property name="checkable">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
        </widget>
       </item>
       <item>
-       <widget class="PushButton" name="btnTestActive2">
+       <widget class="PushButton" name="btnTestAppend_File31">
         <property name="styleSheet">
          <string notr="true">background-color: rgb(252, 233, 79);</string>
         </property>
         <property name="text">
-         <string>active_2</string>
+         <string>test
+append_file</string>
         </property>
         <property name="checkable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestActive3">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>active_3</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestActive4">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>active_4</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="PushButton" name="btnTestActive5">
-        <property name="styleSheet">
-         <string notr="true">background-color: rgb(252, 233, 79);</string>
-        </property>
-        <property name="text">
-         <string>active_5</string>
-        </property>
-        <property name="checkable">
-         <bool>true</bool>
+         <bool>false</bool>
         </property>
        </widget>
       </item>
@@ -530,24 +509,7 @@ Machine on</string>
  <resources>
   <include location="BallScrewVCP.qrc"/>
  </resources>
- <connections>
-  <connection>
-   <sender>btnSaveState31</sender>
-   <signal>clicked()</signal>
-   <receiver>BallScrewControlMainWindow</receiver>
-   <slot>onBtnSaveState31()</slot>
-   <hints>
-    <hint type="sourcelabel">
-     <x>960</x>
-     <y>289</y>
-    </hint>
-    <hint type="destinationlabel">
-     <x>1186</x>
-     <y>271</y>
-    </hint>
-   </hints>
-  </connection>
- </connections>
+ <connections/>
  <slots>
   <slot>onBtnTempShow34()</slot>
   <slot>onBtnTempShow33()</slot>
